# ragzilla

./: CLAUDE.md  Cargo.toml  README.md
crates/embedding/: Cargo.toml  README.md
crates/embedding/src/: lib.rs
crates/parsing/: Cargo.toml  README.md
crates/parsing/src/: lib.rs
crates/transcription/: Cargo.toml  README.md
crates/transcription/src/: lib.rs
src/: lib.rs  transcribing.rs
