[workspace]
members = ["crates/embedding", "crates/parsing", "crates/transcription"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Leonard Excoffier"]
license = "MIT"
repository = "https://github.com/excoffierleonard/ragzilla"

[workspace.dependencies]
# Dependencies
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
# Dev dependencies
tokio = { version = "1.44.1", features = ["full"] }
dotenvy = "0.15.7"
