[package]
name = "ragzilla"
version = "0.3.1"
edition = "2024"
authors = ["Leonard Excoffier"]
license = "MIT"
repository = "https://github.com/excoffierleonard/ragzilla"
description = "A Rust library providing tools for RAG (Retrieval-Augmented Generation) pipelines"
documentation = "https://docs.rs/ragzilla"
keywords = ["rag", "embedding", "parsing", "transcribing", "ai"]
categories = ["api-bindings", "text-processing"]

[features]
default = []
embedding = []
parsing = []
transcribing = []
all = ["embedding", "parsing", "transcribing"]

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
dotenvy = "0.15.7"
