[package]
name = "ragzilla-embedding"
version = "0.2.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A Rust library for creating text embeddings using the Gemini API"
documentation = "https://docs.rs/ragzilla-embedding"
keywords = ["embedding", "gemini", "ai", "vector", "rag"]
categories = ["api-bindings", "text-processing"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
